code cleaning and improving